--- a/packaging/org.eclipse.emf.compare.git.pgm.update/pom.xml
+++ b/packaging/org.eclipse.emf.compare.git.pgm.update/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath>../../org.eclipse.emf.compare.git.pgm.parent/</relativePath>
 	</parent>
 	<groupId>org.eclipse.emf.compare.git.pgm</groupId>
-	<artifactId>org.eclipse.emf.compare.git.pgm.app.update</artifactId>
+	<artifactId>org.eclipse.emf.compare.git.pgm.update</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-repository</packaging>
 	<build>
