Integration of "Integration tests" in the maven build.

--- a/plugins/org.eclipse.emf.compare.git.pgm.tests/build.properties
+++ b/plugins/org.eclipse.emf.compare.git.pgm.tests/build.properties
@@ -10,5 +10,7 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               model/
 jre.compilation.profile = J2SE-1.5
+src.includes = model/
